[workspace]
members = [
    "galileo",
    "galileo-mvt",
    "galileo-types",
    "galileo/examples/with_egui",
]
resolver = "2"

exclude = [
    "wasm_examples/raster_tiles",
    "wasm_examples/vector_tiles",
    "wasm_examples/feature_layers",
    "wasm_examples/many_points",
    "wasm_examples/lambert",
    "wasm_examples/with_egui",
    "android_examples/raster_tiles/rust",
]

[workspace.package]
authors = ["Maxim Gritsenko <maxim@gritsenko.biz>"]
categories = ["science::geo"]
edition = "2021"
keywords = ["gis", "map", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Maximkaaa/galileo"
version = "0.1.0-alpha.0"
