[workspace]
members = [
    "galileo",
    "galileo-mvt",
    "galileo-types",
    "galileo-egui",
    "web-example",
]
resolver = "2"

exclude = [
    "android_examples/raster_tiles/rust",
    "wasm_examples/feature_layers",
    "wasm_examples/labels",
    "wasm_examples/lambert",
    "wasm_examples/many_points",
    "wasm_examples/raster_tiles",
    "wasm_examples/vector_tiles",
    "wasm_examples/with_egui",
]

[profile.release]
debug = true

[workspace.package]
authors = ["Maxim Gritsenko <maxim@gritsenko.biz>"]
categories = ["science::geo"]
edition = "2021"
keywords = ["gis", "map", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Maximkaaa/galileo"
version = "0.1.1"

[workspace.lints]
rust.missing_docs = "warn"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }
clippy.unwrap_used = "warn"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
approx = "0.5"
assert_matches = "1.5"
async-trait = "0.1"
base64 = "0.21"
bincode = "2.0.0-rc.3"
bitcode = "0.6"
bytemuck = "1.14"
bytes = "1.4"
cfg-if = "1"
console_log = "1"
console_error_panic_hook = "0.1"
csv = "1.3"
egui = "0.31"
egui-wgpu = "0.31"
eframe = { version = "0.31", default-features = false }
env_logger = "0.11"
fontdb = { version = "0.23", default-features = false }
font-kit = "0.14"
font-query = { git = "https://github.com/Maximkaaa/font-query" }
futures = "0.3"
futures-intrusive = "0.5"
galileo = { path = "galileo", version = "0.1.1" }
galileo-egui = { path = "galileo-egui", version = "0.1.1" }
galileo-mvt = { path = "galileo-mvt", version = "0.1.1" }
galileo-types = { path = "galileo-types", version = "0.1.1" }
geo = "0.27"
geodesy = "0.12"
geojson = "0.24"
geozero = "0.13"
geo-types = "0.7"
getrandom = "0.2"
image = { version = "0.24", default-features = false }
insta = "1.41"
js-sys = "0.3"
las = "0.8"
lazy_static = "1.4"
log = "0.4"
lyon = "1"
maybe-sync = "0.1"
nalgebra = "0.32"
num-traits = "0.2"
parking_lot = "0.12"
prost = "0.12"
prost-build = "0.12"
quick_cache = "0.4"
raw-window-handle = "0.6"
regex = "1.11"
reqwest = "0.11"
rustybuzz = "0.20"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
serde_json = "1"
strfmt = "0.2"
thiserror = "1"
tokio = { version = "1.39", default-features = false }
tokio-test = "0.4"
# Fix the version of uuid to prevent build breaking
uuid = "=1.12.1"
wasm-bindgen = "0.2"
wasm-bindgen-derive = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1"
web-sys = "0.3"
wgpu = { version = "24", default-features = false }
winit = { version = "0.30", default-features = false }
