[package]
name = "galileo-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-egui"
description = "Egui widget showing Galileo map"
readme = "../README.md"

[features]
default = ["init"]
init = ["eframe", "tokio", "env_logger"]
fontconfig-dlopen = ["galileo/fontconfig-dlopen"]

[dependencies]
egui = { workspace = true }
egui-wgpu = { workspace = true }
eframe = { workspace = true, optional = true, default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
env_logger = { workspace = true, optional = true }
galileo = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }

