[package]
name = "galileo-mvt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-mvt"
description = "Mapbox Vector Tile format reader"
readme = "../README.md"
exclude = [
    "test-data/*"
]

[features]
default = []
generate_proto = []

[dependencies]
bytes = "1.5.0"
prost = "0.12.2"
galileo-types = { path = "../galileo-types", version = "0.1.1" }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }

[build-dependencies]
prost-build = "0.12.2"
