[package]
name = "galileo-mvt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-mvt"
description = "Mapbox Vector Tile format reader"
readme = "../README.md"
exclude = ["test-data/*"]

[features]
default = []

[dependencies]
bytes = "1.5.0"
galileo-types = { path = "../galileo-types", version = "0.1.1" }
geozero = { version = "0.13.0", features = ["with-mvt"] }
log = "0.4.20"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
prost = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
strfmt = "0.2"
thiserror = "1.0"

[build-dependencies]
prost-build = "0.12.2"
