[package]
name = "galileo-mvt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-mvt"
description = "Mapbox Vector Tile format reader"
readme = "../README.md"
exclude = ["test-data/*"]

[features]
default = []

[dependencies]
bytes = { workspace = true }
galileo-types = { workspace = true }
geozero = { workspace = true, features = ["with-mvt"] }
log = { workspace = true }
nalgebra = { workspace = true, features = ["serde-serialize"] }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strfmt = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[build-dependencies]
prost-build = { workspace = true }
