[package]
name = "galileo-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-types"
description = "Trait based geo geometries and algorithms"
readme = "../README.md"

[features]
default = ["geo-types", "geodesy"]

[dependencies]
geo-types = { version = "0.7", optional = true }
geodesy = { version = "0.12", optional = true }
geojson = { version = "0.24", optional = true }
nalgebra = "0.32"
num-traits = "0.2.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
