[package]
name = "galileo-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo-types"
description = "Trait based geo geometries and algorithms"
readme = "../README.md"

[features]
default = ["geo-types", "geodesy"]

[dependencies]
geo-types = { workspace = true, optional = true }
geodesy = { workspace = true, optional = true }
geojson = { workspace = true, optional = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[lints]
workspace = true

