[package]
name = "galileo"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/galileo"
description = "Cross-platform general purpose map rendering engine"
readme = "../README.md"
exclude = ["examples/data"]

[features]
default = ["wgpu", "serde", "winit", "cosmic-text", "_tests", "rustybuzz", "image"]
wgpu = ["dep:wgpu", "raw-window-handle"]
geojson = ["dep:geojson", "galileo-types/geojson"]
rustybuzz = ["dep:rustybuzz"]
image = ["dep:image"]

# Used to provide some fixtures for doctests
_tests = []

[dependencies]
ahash = "0.8"
async-trait = "0.1.68"
base64 = "0.21"
bytemuck = { version = "1.14", features = ["derive"] }
bytes = "1.4.0"
cfg-if = "1"
cosmic-text = { version = "0.12", optional = true }
futures = "0.3.28"
futures-intrusive = "0.5"
galileo-mvt = { path = "../galileo-mvt", version = "0.1.1" }
galileo-types = { path = "../galileo-types", version = "0.1.1" }
geojson = { version = "0.24", optional = true }
geozero = "0.13.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"], optional = true }
lazy_static = "1.4"
log = "0.4"
lyon = { version = "1" }
nalgebra = "0.32"
num-traits = "0.2.17"
quick_cache = "0.4"
raw-window-handle = { version = "0.6", optional = true }
rustybuzz = { version = "0.17", optional = true }
serde = { version = "1.0", optional = true, features = ["std", "derive", "rc"] }
strfmt = "0.2"
thiserror = "1.0"
web-time = "1.0"
winit = { version = "0.30", features = ["rwh_06"], optional = true }

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
assert_matches = "1.5"
bincode = "1.3"
csv = "1.3"
env_logger = "0.11"
geo = "0.27"
geo-types = "0.7"
geojson = "0.24"
las = { version = "0.8", features = ["laz"] }
notify = "6.1"
serde_json = "1.0"
tokio-test = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "22", optional = true }
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
maybe-sync = { version = "0.1", features = ["sync"] }
reqwest = "0.11.18"
rayon = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "22", default-features = false, features = ["webgl", "wgsl"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen = "0.2"
wasm-bindgen-derive = { version = "0.2" }
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["std", "derive"] }
serde_bytes = { version = "0.11" }
bincode = "1.3"
serde-wasm-bindgen = "0.6"
maybe-sync = { version = "0.1", features = [] }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.39", default-features = false, features = ["sync"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "ImageData",
    "Request",
    "Headers",
    "RequestInit",
    "RequestMode",
    "Response",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.11.18", features = ["native-tls-vendored"] }
winit = { version = "0.30", features = ["android-native-activity"] }

[[example]]
name = "render_to_file"
required-features = ["geojson"]

[lints]
workspace = true

