[package]
name = "feature_layers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version ="0.30", features = ["rwh_05"] }
galileo = { path = "../../galileo" }
galileo-types = { path = "../../galileo-types" }
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
log = "0.4"
wasm-bindgen-futures = "0.4"
js-sys = { version = "0.3" }
geojson = "0.24"
csv = "1.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
num-traits = "0.2.17"
