[package]
name = "many_points"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
galileo = { path = "../../galileo" }
galileo-types = { path = "../../galileo-types" }
js-sys = { version = "0.3" }
log = "0.4"
num-traits = "0.2.17"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
winit = { version = "0.30", features = ["rwh_05"] }

[lib]
crate-type = ["cdylib"]
