[package]
name = "vector_tiles_example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
galileo = { path = "../../galileo" }
galileo-types = { path = "../../galileo-types" }
js-sys = { version = "0.3" }
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1.39", default-features = false, features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
winit = { version = "0.30", features = ["rwh_05"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

