[package]
name = "raster_tiles_android"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
log = "0.4"
tokio = {version = "1", features = ["rt-multi-thread"]}

# Use this version until https://github.com/sfackler/rust-openssl/issues/2163 is fixed
openssl-sys = "=0.9.92"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5", features = ["native-activity"] }
android_logger = "0.13"
winit = { version = "0.29", features = ["android-native-activity"] }
