[package]
edition = "2021"
name = "with_egui"
version = "0.1.0"

[[bin]]
name = "with_egui"

[dependencies]
egui = "0.25.0"
egui-wgpu = "0.25.0"
egui-winit = { version = "0.25.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
wgpu = { version = "0.18", default-features = false }
winit = { version = "0.29", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
features = ["clipboard", "links", "wayland", "x11"]
