[package]
edition = "2021"
name = "with_egui"
version = "0.1.0"

[dependencies]
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = { version = "0.29", default-features = false }
env_logger = { version = "0.11", default-features = false }
galileo = { path = "../../../galileo" }
galileo-types = { path = "../../../galileo-types" }
parking_lot = { workspace = true }
wgpu = { workspace = true, default-features = false }
winit = { workspace = true, default-features = false }

[[bin]]
name = "with_egui"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", default-features = false, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.egui-winit]
version = "0.29"
features = ["clipboard", "links", "wayland", "x11"]
